--- a/Kpi-Reporting-App/index.html
+++ b/Kpi-Reporting-App/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <title>KPI-Reporting</title>
 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/styles.css">
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.js"></script>
@@ -12,20 +13,15 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-noty/2.3.7/packaged/jquery.noty.packaged.min.js"></script>
     </head>
     <body>
-        <div id="notyContainer"></div>
+        <div class="notyContainer"></div>
 
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="#/projects">projects</a></li>
-                    <li><a href="#/testCases">testCases</a></li>
-                    <li><a href="#/executions">executions</a></li>
-                    <li><a href="#/reallocations">reallocations</a></li>
-                </ul>
-            </nav>
-        </header>
+        <div class="wrapper">
+            <h2 class="main-title">KPI Reporting System</h2>
 
-        <main class="wrapper clearfix" ng-view=""></main>
+            <nav main-menu></nav>
+
+            <main ng-view=""></main>
+        </div>
 
         <script src="js/app.js"></script>
         <script src="js/noty.js"></script>
@@ -33,11 +29,21 @@
         <!-- Controllers -->
         <script src="js/controllers/AppController.js"></script>
         <script src="js/controllers/ProjectsController.js"></script>
+        <script src="js/controllers/ProjectInfoController.js"></script>
+        <script src="js/controllers/ProjectMapController.js"></script>
+        <script src="js/controllers/StatusesController.js"></script>
 
         <!-- Services -->
         <script src="js/services/projectsData.js"></script>
+        <script src="js/services/executionsData.js"></script>
+        <script src="js/services/testCasesData.js"></script>
+        <script src="js/services/statusesData.js"></script>
 
         <!-- Directives -->
+        <script src="js/directives/mainMenu.js"></script>
+        <script src="js/directives/projectInfo.js"></script>
+        <script src="js/directives/projectMenu.js"></script>
+        <script src="js/directives/statusChange.js"></script>
 
     </body>
 </html>
