--- a/Kpi-Reporting-App/index.html
+++ b/Kpi-Reporting-App/index.html
@@ -6,11 +6,13 @@
 
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/login-form.css">
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-route.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-noty/2.3.7/packaged/jquery.noty.packaged.min.js"></script>
+        <script src="js/lib/jQuery.js"></script>
+        <script src="js/lib/angular.js"></script>
+        <script src="js/lib/angular-route.js"></script>
+        <script src="js/lib/noty.js"></script>
+        <script src="js/lib/ngStorage.js"></script>
     </head>
     <body>
         <div class="notyContainer"></div>
@@ -18,32 +20,46 @@
         <div class="wrapper">
             <h2 class="main-title">KPI Reporting System</h2>
 
-            <nav main-menu></nav>
+            <header ng-if="authentication.isLoggedIn()">
+                <div user-header></div>
+            </header>
 
             <main ng-view=""></main>
         </div>
 
+        <script src="js/serverInfo.js"></script>
         <script src="js/app.js"></script>
         <script src="js/noty.js"></script>
 
         <!-- Controllers -->
         <script src="js/controllers/AppController.js"></script>
-        <script src="js/controllers/ProjectsController.js"></script>
-        <script src="js/controllers/ProjectInfoController.js"></script>
+        <script src="js/controllers/authorization/LoginController.js"></script>
+        <script src="js/controllers/UserHeaderController.js"></script>
+        <script src="js/controllers/ProjectStatisticsController.js"></script>
         <script src="js/controllers/ProjectMapController.js"></script>
-        <script src="js/controllers/StatusesController.js"></script>
+        <script src="js/controllers/ProjectSetupController.js"></script>
+        <script src="js/controllers/StatusesChangeController.js"></script>
+        <script src="js/controllers/UserChangeController.js"></script>
+        <script src="js/controllers/DateChangeController.js"></script>
 
         <!-- Services -->
         <script src="js/services/projectsData.js"></script>
-        <script src="js/services/executionsData.js"></script>
         <script src="js/services/testCasesData.js"></script>
         <script src="js/services/statusesData.js"></script>
+        <script src="js/services/usersData.js"></script>
+        <script src="js/services/daysData.js"></script>
+        <script src="js/services/authentication.js"></script>
 
         <!-- Directives -->
-        <script src="js/directives/mainMenu.js"></script>
+        <script src="js/directives/login.js"></script>
+        <script src="js/directives/userHeader.js"></script>
         <script src="js/directives/projectInfo.js"></script>
         <script src="js/directives/projectMenu.js"></script>
         <script src="js/directives/statusChange.js"></script>
+        <script src="js/directives/userChange.js"></script>
+        <script src="js/directives/dateChange.js"></script>
+        <script src="js/directives/expandTestCaseButtons.js"></script>
+        <script src="js/directives/testCaseExecutions.js"></script>
 
     </body>
 </html>
