Project setup almost complete. Soon days allocation begins.

--- a/Kpi-Reporting-App/index.html
+++ b/Kpi-Reporting-App/index.html
@@ -5,6 +5,7 @@
         <title>KPI-Reporting</title>
 
         <link rel="stylesheet" href="css/reset.css">
+        <!--<link rel="stylesheet" href="css/normalize.css">-->
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/login-form.css">
 
@@ -36,11 +37,11 @@
         <script src="js/controllers/authorization/LoginController.js"></script>
         <script src="js/controllers/UserHeaderController.js"></script>
         <script src="js/controllers/ProjectStatisticsController.js"></script>
-        <script src="js/controllers/ProjectMapController.js"></script>
         <script src="js/controllers/ProjectSetupController.js"></script>
-        <script src="js/controllers/StatusesChangeController.js"></script>
-        <script src="js/controllers/UserChangeController.js"></script>
-        <script src="js/controllers/DateChangeController.js"></script>
+        <script src="js/controllers/allocationMap/ProjectMapController.js"></script>
+        <script src="js/controllers/allocationMap/StatusesChangeController.js"></script>
+        <script src="js/controllers/allocationMap/UserChangeController.js"></script>
+        <script src="js/controllers/allocationMap/DateChangeController.js"></script>
 
         <!-- Services -->
         <script src="js/services/projectsData.js"></script>
@@ -49,6 +50,7 @@
         <script src="js/services/usersData.js"></script>
         <script src="js/services/daysData.js"></script>
         <script src="js/services/authentication.js"></script>
+        <script src="js/services/setupData.js"></script>
 
         <!-- Directives -->
         <script src="js/directives/login.js"></script>
