Advancing with system automation and features

--- a/Kpi-Reporting-App/index.html
+++ b/Kpi-Reporting-App/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/login-form.css">
 
-        <script src="js/lib/jQuery.js"></script>
+        <script src="js/lib/jquery.js"></script>
         <script src="js/lib/angular.js"></script>
         <script src="js/lib/angular-route.js"></script>
         <script src="js/lib/noty.js"></script>
@@ -38,6 +38,7 @@
         <script src="js/controllers/UserHeaderController.js"></script>
         <script src="js/controllers/ProjectStatisticsController.js"></script>
         <script src="js/controllers/ProjectSetupController.js"></script>
+        <script src="js/controllers/ProjectDaysController.js"></script>
         <script src="js/controllers/allocationMap/ProjectMapController.js"></script>
         <script src="js/controllers/allocationMap/StatusesChangeController.js"></script>
         <script src="js/controllers/allocationMap/UserChangeController.js"></script>
