--- a/Kpi-Reporting-App/index.html
+++ b/Kpi-Reporting-App/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="kpiReporting" ng-controller="AppController">
+<html ng-app="kpiReporting" ng-controller="AppController" ng-cloak>
     <head lang="en">
         <meta charset="UTF-8">
         <title>KPI-Reporting</title>
@@ -9,11 +9,13 @@
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/login-form.css">
 
-        <script src="js/lib/jquery.js"></script>
+        <script src="js/lib/jQuery.js"></script>
         <script src="js/lib/angular.js"></script>
         <script src="js/lib/angular-route.js"></script>
         <script src="js/lib/noty.js"></script>
         <script src="js/lib/ngStorage.js"></script>
+        <script src="js/lib/angular-spinner.min.js"></script>
+        <script src="js/lib/spin.js"></script>
     </head>
     <body>
         <div class="notyContainer"></div>
@@ -26,6 +28,8 @@
             </header>
 
             <main ng-view=""></main>
+
+            <span us-spinner="{radius:10, width:5, length:1}" spinner-key="preloader"></span>
         </div>
 
         <script src="js/serverInfo.js"></script>
