Advanced styling, code reworking and designing the system.

--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/index.html
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/index.html
@@ -6,9 +6,11 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main-styles.css">
+        <link rel="stylesheet" href="css/general.css">
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/project-menu.css">
         <link rel="stylesheet" href="css/setup-page.css">
+        <link rel="stylesheet" href="css/days-allocation-page.css">
 
         <script src="js/lib/jQuery.js"></script>
         <script src="js/lib/angular.js"></script>
