Nearly finalizing allocation map styling

--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/index.html
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/index.html
@@ -3,6 +3,7 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title>KPI-Reporting</title>
+        <link rel="shortcut icon" href="resources/ooredoo_1_icon.ico">
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main-styles.css">
@@ -11,6 +12,7 @@
         <link rel="stylesheet" href="css/project-menu.css">
         <link rel="stylesheet" href="css/setup-page.css">
         <link rel="stylesheet" href="css/days-allocation-page.css">
+        <link rel="stylesheet" href="css/allocation-map-page.css">
 
         <script src="js/lib/jQuery.js"></script>
         <script src="js/lib/angular.js"></script>
