Redisigned fisnished, little polishing required for some functionalities.

--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/index.html
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/index.html
@@ -14,6 +14,8 @@
         <link rel="stylesheet" href="css/setup-page.css">
         <link rel="stylesheet" href="css/days-allocation-page.css">
         <link rel="stylesheet" href="css/allocation-map-page.css">
+        <link rel="stylesheet" href="css/users-load.css">
+        <link rel="stylesheet" href="css/user-load.css">
 
         <script src="js/lib/jQuery.js"></script>
         <script src="js/lib/angular.js"></script>
@@ -87,11 +89,7 @@
         <script src="js/directives/daysAllocationPage/parkForm.js"></script>
         <script src="js/directives/daysAllocationPage/configOverride.js"></script>
 
-        <script src="js/directives/usersLoadPage/expandedDays.js"></script>
-        <script src="js/directives/usersLoadPage/userDaysList.js"></script>
-
-        <!--<script src="js/directives/statisticsPage/.js"></script>-->
-
+        <script src="js/directives/usersLoadPage/expandedDay.js"></script>
 
     </body>
 </html>
